# NeuroVerse

./: LICENSE  README.md  main.py
NeuroVerse/: LICENSE  README.md  pyproject.toml
NeuroVerse/app/: main.py
NeuroVerse/app/evaluator/: runner.py
NeuroVerse/app/metrics/: faithfulness.py  hallucination.py  quality.py
NeuroVerse/app/utils/: loader.py
NeuroVerse/cli/: cli.py
NeuroVerse/datasets/: sample_testset.json
datasets/: sample_testset.json
evaluator/: __init__.py  report.py  runner.py
metrics/: faithfulness.py  hallucination.py  quality.py
utils/: loader.py
