[project]
name = "neuroverse"
version = "0.1.0"
description = "LLM evaluation framework for reliability and quality analysis"
authors = [{ name = "N. Ramesh" }]
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools]
packages = ["app"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
